[gd_scene load_steps=17 format=3 uid="uid://cw5256py6w6j8"]

[ext_resource type="Script" uid="uid://sk5j22xchkav" path="res://scenes/draw/draw.gd" id="1_tmstp"]
[ext_resource type="Script" uid="uid://bf7plq4hcgaxn" path="res://data/animal_data.gd" id="2_2g8h5"]
[ext_resource type="Resource" uid="uid://br0yp4d13brcp" path="res://resources/animals/chick.tres" id="3_75ru5"]
[ext_resource type="Resource" uid="uid://doyktkuwfjc0v" path="res://resources/animals/chimp.tres" id="4_hl5mu"]
[ext_resource type="Resource" uid="uid://c8oyo4fxtgn8s" path="res://resources/animals/cow.tres" id="5_2fpui"]
[ext_resource type="Resource" uid="uid://c4m2dd4syp2l7" path="res://resources/animals/duck.tres" id="6_idacj"]
[ext_resource type="Resource" uid="uid://dio31ucm0oa0b" path="res://resources/animals/elephant.tres" id="7_kp535"]
[ext_resource type="Resource" uid="uid://diq2spv1g88wj" path="res://resources/animals/horse.tres" id="8_1hoec"]
[ext_resource type="Resource" uid="uid://cv1qhl1mpyhtk" path="res://resources/animals/owl.tres" id="9_mtx7o"]
[ext_resource type="Resource" uid="uid://buha5835ovp5b" path="res://resources/animals/parrot.tres" id="10_besai"]
[ext_resource type="Resource" uid="uid://cjmqh3bebxhdj" path="res://resources/animals/seal.tres" id="11_ukkpr"]
[ext_resource type="Resource" uid="uid://d0vm8kht82wb1" path="res://resources/animals/snake.tres" id="12_klbv4"]
[ext_resource type="Resource" uid="uid://dv5xbwvf7pqq8" path="res://resources/animals/wolf.tres" id="13_2b17j"]
[ext_resource type="PackedScene" uid="uid://3j161uu6daw6" path="res://scenes/draw/canvas/canvas.tscn" id="14_65k71"]
[ext_resource type="PackedScene" uid="uid://s8egcqjjvaf8" path="res://scenes/background/background.tscn" id="15_8mcof"]
[ext_resource type="Texture2D" uid="uid://dlppwlm48mack" path="res://assets/sprites/frame.png" id="16_ypiif"]

[node name="Draw" type="Node"]
script = ExtResource("1_tmstp")
animal_dataset = Array[ExtResource("2_2g8h5")]([ExtResource("3_75ru5"), ExtResource("4_hl5mu"), ExtResource("5_2fpui"), ExtResource("6_idacj"), ExtResource("7_kp535"), ExtResource("8_1hoec"), ExtResource("9_mtx7o"), ExtResource("10_besai"), ExtResource("11_ukkpr"), ExtResource("12_klbv4"), ExtResource("13_2b17j")])
canvas_scene = ExtResource("14_65k71")

[node name="Background" parent="." instance=ExtResource("15_8mcof")]

[node name="AnimalContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="AnimalContainer"]
layout_mode = 2

[node name="FrameContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -204.0
offset_right = 204.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="FrameContainer"]
layout_mode = 2
texture = ExtResource("16_ypiif")

[node name="CanvasContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
